force-app/main/default/objects/Account/fields/Bank_A_c_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_A_c_Number__c</fullName>
    <label>Bank A/c Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>