force-app/main/default/objects/Account/fields/Client_Category__c.field-meta.xml
<CustomField>
    <fullName>Client_Category__c</fullName>
    <label>Client Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Brands/Enterprise</fullName>
            </value>
            <value>
                <fullName>FAPSSe</fullName>
            </value>
            <value>
                <fullName>Key Accounts (Ecommerce)</fullName>
            </value>
            <value>
                <fullName>Long Tail/SMB</fullName>
            </value>
            <value>
                <fullName>Aggregator/Co-loader</fullName>
            </value>
            <value>
                <fullName>X Border - Import</fullName>
            </value>
            <value>
                <fullName>X Border - Export</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>C2C</fullName>
            </value>
            <value>
                <fullName>BFSI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>