force-app/main/default/objects/Account/fields/Contact_number__c.field-meta.xml
<CustomField>
    <fullName>Contact_number__c</fullName>
    <label>Contact number</label>
    <type>Phone</type>
</CustomField>