force-app/main/default/objects/Account/fields/CST_Number__c.field-meta.xml
<CustomField>
    <fullName>CST_Number__c</fullName>
    <label>CST Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>