force-app/main/default/objects/Account/fields/DTO_email_recipients__c.field-meta.xml
<CustomField>
    <fullName>DTO_email_recipients__c</fullName>
    <label>DTO email recipients</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>