force-app/main/default/objects/Account/fields/ECO_Code__c.field-meta.xml
<CustomField>
    <fullName>ECO_Code__c</fullName>
    <label>ECO Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>