force-app/main/default/objects/Account/fields/EMAIL_POC_1__c.field-meta.xml
<CustomField>
    <fullName>EMAIL_POC_1__c</fullName>
    <label>EMAIL POC 1</label>
    <type>Email</type>
</CustomField>