force-app/main/default/objects/Account/fields/EMAIL_POC_2__c.field-meta.xml
<CustomField>
    <fullName>EMAIL_POC_2__c</fullName>
    <label>EMAIL POC 2</label>
    <type>Email</type>
</CustomField>