force-app/main/default/objects/Account/fields/EMAIL_POC_3__c.field-meta.xml
<CustomField>
    <fullName>EMAIL_POC_3__c</fullName>
    <label>EMAIL POC 3</label>
    <type>Email</type>
</CustomField>