force-app/main/default/objects/Account/fields/FRS_Code__c.field-meta.xml
<CustomField>
    <fullName>FRS_Code__c</fullName>
    <label>FRS Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>