force-app/main/default/objects/Account/fields/GST_not_registered__c.field-meta.xml
<CustomField>
    <fullName>GST_not_registered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GST not registered</label>
    <type>Checkbox</type>
</CustomField>