force-app/main/default/objects/Account/fields/HQ_State__c.field-meta.xml
<CustomField>
    <fullName>HQ_State__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HQ State</label>
    <type>Checkbox</type>
</CustomField>