force-app/main/default/objects/Account/fields/Is_Prepaid__c.field-meta.xml
<CustomField>
    <fullName>Is_Prepaid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Prepaid</label>
    <type>Checkbox</type>
</CustomField>