force-app/main/default/objects/Account/fields/Monthly_Volume__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Volume__c</fullName>
    <label>Delhivery&#39;s Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>