force-app/main/default/objects/Account/fields/MPS_Service__c.field-meta.xml
<CustomField>
    <fullName>MPS_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MPS Service</label>
    <type>Checkbox</type>
</CustomField>