force-app/main/default/objects/Account/fields/NAME_POC_1__c.field-meta.xml
<CustomField>
    <fullName>NAME_POC_1__c</fullName>
    <label>NAME POC 1</label>
    <length>45</length>
    <type>Text</type>
</CustomField>