force-app/main/default/objects/Account/fields/NAME_POC_2__c.field-meta.xml
<CustomField>
    <fullName>NAME_POC_2__c</fullName>
    <label>NAME POC 2</label>
    <length>45</length>
    <type>Text</type>
</CustomField>