force-app/main/default/objects/Account/fields/NDR_report_recipients__c.field-meta.xml
<CustomField>
    <fullName>NDR_report_recipients__c</fullName>
    <label>NDR report recipients</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>