force-app/main/default/objects/Account/fields/Oracle_ID__c.field-meta.xml
<CustomField>
    <fullName>Oracle_ID__c</fullName>
    <description>Oracle ID floating from Oracle and COB</description>
    <label>Oracle ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>