force-app/main/default/objects/Account/fields/PAN_card__c.field-meta.xml
<CustomField>
    <fullName>PAN_card__c</fullName>
    <label>PAN card</label>
    <length>10</length>
    <type>Text</type>
</CustomField>