force-app/main/default/objects/Account/fields/POC_TEAM__c.field-meta.xml
<CustomField>
    <fullName>POC_TEAM__c</fullName>
    <label>POC TEAM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North POC</fullName>
            </value>
            <value>
                <fullName>Fashion CSM</fullName>
            </value>
            <value>
                <fullName>West POC</fullName>
            </value>
            <value>
                <fullName>South POC</fullName>
            </value>
            <value>
                <fullName>LT B2C POC</fullName>
            </value>
            <value>
                <fullName>Ravinder Thakur</fullName>
            </value>
            <value>
                <fullName>North CSM B2B</fullName>
            </value>
            <value>
                <fullName>West CSM B2B</fullName>
            </value>
            <value>
                <fullName>South CSM B2B</fullName>
            </value>
            <value>
                <fullName>East CSM B2B</fullName>
            </value>
            <value>
                <fullName>LT CSM</fullName>
            </value>
            <value>
                <fullName>C2C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>