force-app/main/default/objects/Account/fields/Product_category__c.field-meta.xml
<CustomField>
    <fullName>Product_category__c</fullName>
    <label>Product category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>