force-app/main/default/objects/Account/fields/Registered_Address_Country__c.field-meta.xml
<CustomField>
    <fullName>Registered_Address_Country__c</fullName>
    <label>Registered Address Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>