force-app/main/default/objects/Account/fields/Registered_Address_State__c.field-meta.xml
<CustomField>
    <fullName>Registered_Address_State__c</fullName>
    <label>Registered Address State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>