force-app/main/default/objects/Account/fields/REM_email__c.field-meta.xml
<CustomField>
    <fullName>REM_email__c</fullName>
    <label>REM email</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>