force-app/main/default/objects/Account/fields/Report_Recipients__c.field-meta.xml
<CustomField>
    <fullName>Report_Recipients__c</fullName>
    <label>Report Recipient Email</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>