force-app/main/default/objects/Account/fields/RTO_email_recipients__c.field-meta.xml
<CustomField>
    <fullName>RTO_email_recipients__c</fullName>
    <label>RTO email recipients</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>