force-app/main/default/objects/Account/fields/send_sms_cash__c.field-meta.xml
<CustomField>
    <fullName>send_sms_cash__c</fullName>
    <defaultValue>false</defaultValue>
    <label>send sms cash</label>
    <type>Checkbox</type>
</CustomField>