force-app/main/default/objects/Account/fields/Send_SMS_COD__c.field-meta.xml
<CustomField>
    <fullName>Send_SMS_COD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send SMS COD</label>
    <type>Checkbox</type>
</CustomField>