force-app/main/default/objects/Account/fields/Send_SMS_Prepaid__c.field-meta.xml
<CustomField>
    <fullName>Send_SMS_Prepaid__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Send SMS Prepaid</label>
    <type>Checkbox</type>
</CustomField>