force-app/main/default/objects/Account/fields/State_Name__c.field-meta.xml
<CustomField>
    <fullName>State_Name__c</fullName>
    <label>State Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>