force-app/main/default/objects/Account/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Client_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Large Horizontals</fullName>
            </value>
            <value>
                <fullName>Vertical Leaders</fullName>
            </value>
            <value>
                <fullName>Long tail e-tailers and platform sellers</fullName>
            </value>
            <value>
                <fullName>Marketplace Vendors</fullName>
            </value>
            <value>
                <fullName>Independent SMBs</fullName>
            </value>
            <value>
                <fullName>Fashion</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>FMCG</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Health,Pharma</fullName>
                <label>Health, Pharma</label>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Office Products</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Aggregator</fullName>
            </value>
            <value>
                <fullName>Ecommerce Horizontal</fullName>
            </value>
            <value>
                <fullName>Ecommerce Vertical</fullName>
            </value>
            <value>
                <fullName>Consumer Durables</fullName>
            </value>
            <value>
                <fullName>Industrials</fullName>
            </value>
            <value>
                <fullName>Auto Ancillaries &amp; Tyres</fullName>
            </value>
            <value>
                <fullName>Health and Pharma</fullName>
            </value>
            <value>
                <fullName>Books and Stationery</fullName>
            </value>
            <value>
                <fullName>Textiles</fullName>
            </value>
            <value>
                <fullName>Lubricants &amp; Paints</fullName>
            </value>
            <value>
                <fullName>Furniture and White Goods</fullName>
            </value>
            <value>
                <fullName>Etail Longtail</fullName>
            </value>
            <value>
                <fullName>SMB</fullName>
            </value>
            <value>
                <fullName>Aggregator/Co-loader</fullName>
            </value>
            <value>
                <fullName>C2C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>