force-app/main/default/objects/Account/fields/Upload_Recipients__c.field-meta.xml
<CustomField>
    <fullName>Upload_Recipients__c</fullName>
    <label>Upload Recipient Email</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>