force-app/main/default/objects/Account/fields/Wallet_Notification_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Wallet_Notification_Mobile__c</fullName>
    <label>Wallet Notification Mobile</label>
    <type>Phone</type>
</CustomField>