force-app/main/default/objects/Account/fields/Wallet_Provider__c.field-meta.xml
<CustomField>
    <fullName>Wallet_Provider__c</fullName>
    <label>Wallet Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Delhivery miles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>